blockml/test/errors/12_chart/e205/e205d.dashboard
dashboard: e205d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e205m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  tile:
    view_size: 'manual'
    view_width: unk        
    view_height: 300


